# swallow_stars_proj_1

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  boss.cpp  boss.h  hunters.cpp  hunters.h  main.cpp  player.cpp  player.h  stars.cpp  stars.h  taxi.cpp  taxi.h  wind.cpp  wind.h
CONFIGS/: board.cfg  hunters..cfg  hunters.cfg  stats.cfg
SCORES/: scores.txt
